--- a/Manim.ipynb
+++ b/Manim.ipynb
@@ -46,7 +46,22 @@
     "from manim import *\n",
     "\n",
     "config.media_width = \"75%\"\n",
-    "config.verbosity = \"WARNING\""
+    "config.verbosity = \"WARNING\"\n",
+    "config.media_embed=True\n",
+    "config.background_color = \"#0d0c1a\"\n",
+    "\n",
+    "!git clone https://github.com/iansyahr/ManimProject\n",
+    "!mkdir -p ~/.local/share/fonts\n",
+    "!cp ManimProject/Gelombang/Font/Rubik/static/*ttf ~/.local/share/fonts/\n",
+    "!fc-cache -f -v\n",
+    "!curl -o Single+Day.zip https://cdn.glitch.global/00c5b312-7c23-48b1-af8f-a03b5f22ffd5/Single_Day.zip?v=1712100107504\n",
+    "!unzip -o Single+Day.zip -d \"SingleDay\"\n",
+    "!mv SingleDay/*ttf ~/.local/share/fonts/\n",
+    "!fc-cache -f -v\n",
+    "!curl -o DM+Serif+Text.zip https://cdn.glitch.global/00c5b312-7c23-48b1-af8f-a03b5f22ffd5/DM_Serif_Text.zip?v=1712107269827\n",
+    "!unzip -o DM+Serif+Text.zip -d \"DMSerifText\"\n",
+    "!cp DMSerifText/*ttf ~/.local/share/fonts/\n",
+    "!fc-cache -f -v"
    ]
   },
   {
