--- a/Manim.ipynb
+++ b/Manim.ipynb
@@ -52,12 +52,17 @@
     "\n",
     "!git clone https://github.com/iansyahr/ManimProject\n",
     "!mkdir -p ~/.local/share/fonts\n",
-    "!cp ManimProject/Gelombang/Font/Rubik/static/*ttf ~/.local/share/fonts/\n",
+    "\n",
+    "!curl -o Rubik.zip https://cdn.glitch.global/4d16ee61-20ed-43ad-9f34-e4ae6ec6666d/Rubik.zip?v=1718536526992\n",
+    "!unzip -o Rubik.zip -d \"Rubik\"\n",
+    "!mv Rubik/*ttf ~/.local/share/fonts/\n",
     "!fc-cache -f -v\n",
+    "\n",
     "!curl -o Single+Day.zip https://cdn.glitch.global/00c5b312-7c23-48b1-af8f-a03b5f22ffd5/Single_Day.zip?v=1712100107504\n",
     "!unzip -o Single+Day.zip -d \"SingleDay\"\n",
     "!mv SingleDay/*ttf ~/.local/share/fonts/\n",
     "!fc-cache -f -v\n",
+    "\n",
     "!curl -o DM+Serif+Text.zip https://cdn.glitch.global/00c5b312-7c23-48b1-af8f-a03b5f22ffd5/DM_Serif_Text.zip?v=1712107269827\n",
     "!unzip -o DM+Serif+Text.zip -d \"DMSerifText\"\n",
     "!cp DMSerifText/*ttf ~/.local/share/fonts/\n",
